# Ouroboros

./: .gitignore  CMakeLists.txt  Directory.Build.props  FINAL_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_COMPLETE.md  OUROBOROS_ROADMAP.md  OUROBOROS_SWEEP_COMPLETE.md  OURO_ROADMAP.md  Ouro.csproj  Ouro.sln  Ouroboros.csproj  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_PROGRESS.md  PROJECT_ORGANIZATION.md  PROJECT_STATUS.md  README.md  REFACTORING_SUMMARY.md  SWEEP_RESULTS.md  calculator_README.md  fix_aliased_names.ps1  ouro_and_ouroboros_complete.html  parser_debug.txt  range_test.ouro
.cursor/rules/: ruleset.mdc
benchmarks/: benchmark_suite.ouro
debug/: OuroborosSyntaxTest.ouro
docs/: DocSite-Insturctions.md
docs/api/: core_api.md  stdlib_api.md  token_functionality_spec.md
docs/examples/: example_programs.md
docs/reference/: language_reference.md
docs/tutorials/: getting_started.md  ui_framework.md
examples/: hello.ouro  hello_asm.ouro  hello_high.ouro  hello_low.ouro  hello_medium.ouro
ouro-docs/: index.html  package.json  tailwind.config.js
ouro-docs/src/: index.css
ouro-docs/src/pages/: FileIOPage.jsx  HomePage.jsx  LinearAlgebraPage.jsx  (+1 more)
ouroboros-docs/: package-lock.json
ouroboros-docs/src/: App.jsx
scripts/: fix-nullable-warnings.ps1  rename-namespaces.ps1
src/: CMakeLists.txt  Program.cs  Version.cs.in
src/analysis/: AnalysisPass.cs
src/codegen/: LLVMBackend.cs  LLVMContext.cs  LLVMIRBuilder.cs  LLVMOptimizer.cs  NativeCodeGen.cs
src/core/: AttributeProcessor.cs  DiagnosticEngine.cs  DomainSystem.cs
src/core/actors/: ActorSystem.cs
src/core/assembly/: Assembler.cs
src/core/ast/: AstNode.cs
src/core/compiler/: BytecodeBuilder.cs  BytecodeOptimizer.cs  Compiler.cs  CompilerTypes.cs  TypeChecker.cs
src/core/contracts/: ContractSystem.cs
src/core/gpu/: GPUSystem.cs
src/core/lexer/: Lexer.cs
src/core/macros/: MacroSystem.cs
src/core/modules/: ModuleSystem.cs
src/core/parser/: Parser.cs  Parser.cs.backup
src/core/units/: UnitSystem.cs
src/core/vm/: Opcode.cs  VMTypes.cs  VirtualMachine.cs
src/gpu/cuda/: CudaAPI.cs  CudaCompiler.cs  CudaContext.cs
src/gpu/opencl/: OpenCLAPI.cs  OpenCLCompute.cs
src/gpu/vulkan/: VulkanCompute.cs  VulkanTypes.cs
src/ide/: CodeCompletion.cs  DiagnosticProvider.cs  SyntaxHighlighter.cs
src/lsp/: LanguageServer.cs  Protocol.cs
src/optimization/: Optimizer.cs
src/repl/: Repl.cs
src/runtime/: AsyncRuntime.cs  Runtime.cs
src/stdlib/collections/: Dictionary.cs  List.cs  Queue.cs  Stack.cs  Trees.cs
src/stdlib/concurrency/: Actors.cs  Atomics.cs  Channels.cs
src/stdlib/crypto/: Hashing.cs
src/stdlib/data/: Database.cs  IDatabaseProvider.cs  MockDbClasses.cs  Orm.cs
src/stdlib/data/providers/: MySQLProvider.cs  PostgreSQLProvider.cs  SQLiteProvider.cs
src/stdlib/io/: AdvancedFileSystem.cs  FileSystem.cs
src/stdlib/math/: AdvancedMath.cs  MathFunctions.cs  MathSymbols.cs  MathUtils.cs  Matrix.cs  Quaternion.cs  SetOperations.cs  Transform.cs  Vector.cs
src/stdlib/ml/: MachineLearningDSL.cs  NeuralNetwork.cs  TensorOperations.cs
src/stdlib/net/: HttpClient.cs  TcpListener.cs  WebSocket.cs
src/stdlib/system/: Console.cs  DateTime.cs  Environment.cs
src/stdlib/ui/: AdvancedWidgets.cs  Graphics.cs  Layout.cs  UIBuiltins.cs  Widget.cs  Window.cs  WindowsFormsBackend.cs
src/syntaxes/high/: HighLevelParser.cs
src/syntaxes/low/: LowLevelParser.cs
src/syntaxes/medium/: MediumLevelParser.cs
src/tokens/: Token.cs  TokenType.cs  UnitLiteral.cs
src/tools/: Logger.cs
src/tools/docgen/: DocumentationGenerator.cs
src/tools/opm/: PackageManager.cs  PackagePublisher.cs  PrivateRegistry.cs  VersionResolver.cs  opm.cs
src/types/: TypeSystem.cs
tests/: CMakeLists.txt  Ouro.Tests.csproj  TestFramework.cs  TestRunner.cs
tests/infrastructure/: CodeCoverage.cs  ContinuousTesting.cs  FuzzTesting.cs
tests/integration/: CompilerIntegrationTests.cs
tests/performance/: BenchmarkSuite.cs
tests/unit/: CodeGeneratorTests.cs  LexerTests.cs  ParserTests.cs  StandardLibraryTests.cs  TypeCheckerTests.cs  VirtualMachineTests.cs
tools/debug/: debugger.cs
tools/opm/: opm.cs
tools/profile/: profiler.cs
(+14 files in other folders)
